navbar menu changed

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -66,9 +66,17 @@
 						<li>
 							<a href="#pricing">PRICING</a>
 						</li>
-						<li>
-							<a href="contactus.html">CONTACT US</a>
-						</li>
+				        <li class="dropdown active">
+				            <a href="#" class="dropdown-toggle" data-toggle="dropdown">CONTACT US<i class="fa fa-angle-down"></i></a>
+				            <ul class="dropdown-menu" role="menu">
+				                <li class="active">
+				                    <a href="contactus.html">Contact Us</a>
+				                </li>
+				                <li>
+				                    <a href="contactus.html">Support</a>
+				                </li>
+				            </ul>
+				        </li>
 					</ul>
 				</div>
 				<!-- END MAIN NAVIGATION -->
