--- a/index.html
+++ b/index.html
@@ -52,20 +52,36 @@
 								<a href="#top">HOME</a>
 							</li> -->
 						<li>
-							<a href="aboutUs.html">ABOUT</a>
+							<a href="aboutUs.html">ABOUT THE COMPANY</a>
 						</li>
-						<li>
-							<a href="#services">SERVICES</a>
-						</li>
-						<li>
+				        <li class="dropdown active">
+				            <a href="#" class="dropdown-toggle" data-toggle="dropdown">PRODUCTS<i class="fa fa-angle-down"></i></a>
+				            <ul class="dropdown-menu" role="menu">
+				                <li class="active">
+				                    <a href="contactus.html">4x4 Wheelchairs</a>
+				                </li>
+				                <li>
+				                    <a href="support.html">Accessories</a>
+				                </li>
+				            </ul>
+				        </li>
+<!-- 						<li>
 							<a href="#portfolio">PORTFOLIO</a>
 						</li>
 						<li>
 							<a href="#pricing">PRICING</a>
-						</li>
-						<li>
-							<a href="contactus.html">CONTACT US</a>
-						</li>
+						</li> -->
+				        <li class="dropdown active">
+				            <a href="#" class="dropdown-toggle" data-toggle="dropdown">CONTACT US<i class="fa fa-angle-down"></i></a>
+				            <ul class="dropdown-menu" role="menu">
+				                <li class="active">
+				                    <a href="contactus.html">Contact Us</a>
+				                </li>
+				                <li>
+				                    <a href="support.html">Support</a>
+				                </li>
+				            </ul>
+				        </li>
 					</ul>
 				</div>
 				<!-- MAIN NAVIGATION -->
