--- a/index-v4_fullscreen.html
+++ b/index-v4_fullscreen.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="fullscreen">
 
 <head>
-	<title>Home v5 | Repute - Responsive Multipurpose Bootstrap Theme</title>
+	<title>Home v4 | Repute - Responsive Multipurpose Bootstrap Theme</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Observer Mobility">
-	<meta name="author" content="EveryDayKenneth">
+	<meta name="description" content="Responsive Multipurpose Bootstrap Theme">
+	<meta name="author" content="The Develovers">
 	<!-- CSS -->
 	<link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css">
 	<link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -21,14 +21,14 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400italic,400,600,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,300italic,400italic,700,400,300' rel='stylesheet' type='text/css'>
 	<!-- FAVICONS -->
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/observer144x144.png">
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/observer114x114.png">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/observer72x72.png">
-	<link rel="apple-touch-icon-precomposed" href="assets/ico/observer57x57.png">
-	<link rel="shortcut icon" href="assets/ico/observerfavicon.png">
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/repute144x144.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/repute114x114.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/repute72x72.png">
+	<link rel="apple-touch-icon-precomposed" href="assets/ico/repute57x57.png">
+	<link rel="shortcut icon" href="assets/ico/favicon.png">
 </head>
 
-<body class="fullscreen-slider">
+<body>
 	<!-- WRAPPER -->
 	<div class="wrapper">
 		<!-- NAVBAR -->
@@ -55,8 +55,8 @@
 								<li><a href="index-v2.html">Home v2</a></li>
 								<li><a href="index-v2_dark-header.html">Home v2 Dark Header</a></li>
 								<li><a href="index-v3.html">Home v3</a></li>
-								<li><a href="index-v4_fullscreen.html">Home v4 Fullscreen</a></li>
-								<li class="active"><a href="#">Home v5 Fullscreen Slider</a></li>
+								<li class="active"><a href="#">Home v4 Fullscreen</a></li>
+								<li><a href="index-v5_fullscreen_slider.html">Home v5 Fullscreen Slider</a></li>
 								<li class="dropdown ">
 									<a href="#">Blog Home <span class="label label-danger label-main-nav">NEW</span> <i class="fa fa-angle-right"></i></a>
 									<ul class="dropdown-menu" role="menu">
@@ -203,98 +203,42 @@
 		</nav>
 		<!-- END NAVBAR -->
 		<!-- HERO SECTION -->
-		<section class="hero-unit-fullscreen-slider">
-			<div class="slides">
-				<div>
-					<div class="overlay"></div>
-					<div class="container slide-content">
-						<h2 class="hero-heading">ULTRA RESPONSIVE</h2>
-						<p class="lead">Leave it to the theme, it knows how to deal with screen sizes</p>
-						<a href="#" class="btn btn-rounded-4x btn-primary btn-hero">LEARN MORE</a>
-					</div>
-					<img src="assets/img/sliders/full-slide.jpg" alt="Slide Image">
-				</div>
-				<div>
-					<div class="container slide-content text-right">
-						<h2 class="hero-heading">CLEAN &amp; ELEGANT DESIGN</h2>
-						<p class="lead">Giving valuable reputation and credibility to your business</p>
-						<a href="#" class="btn btn-rounded-4x btn-primary btn-hero">LEARN MORE</a>
-					</div>
-					<img src="assets/img/sliders/full-slide2.jpg" alt="Slide Image">
-				</div>
-				<div>
-					<div class="container slide-content text-center">
-						<h2 class="hero-heading">EASY TO CUSTOMIZE</h2>
-						<p class="lead">Readable code, well documented and FREE support</p>
-						<a href="#" class="btn btn-rounded-4x btn-primary btn-hero">LEARN MORE</a>
-					</div>
-					<img src="assets/img/sliders/full-slide3.jpg" alt="Slide Image">
+		<section class="hero-unit-fullscreen">
+			<div class="overlay"></div>
+			<div class="container">
+				<div class="left">
+					<h2 class="hero-heading">EXTRAORDINARY</h2>
+					<p class="lead">Ultra Responsive and Multipurpose Bootstrap Theme</p>
+					<span class="scroll-down"><a href="#about" class="btn btn-lg hero-button">LEARN MORE</a></span>
 				</div>
 			</div>
-			<div class="arrow-nav">
-				<a href="#" id="fullslider-arrow_left" class="arrow-left"><i class="fa fa-angle-left"></i> <span class="sr-only">PREVIOUS</span></a>
-				<a href="#" id="fullslider-arrow_right" class="arrow-right"><i class="fa fa-angle-right"></i> <span class="sr-only">NEXT</span></a>
+			<div class="scroll-down down-arrow">
+				<a href="#about"><i class="fa fa-angle-down"></i></a>
 			</div>
-			<div id="fullslider-pager" class="pager"></div>
 		</section>
 		<!-- END HERO SECTION -->
-		<!-- INTRO -->
-		<section>
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6">
-						<h2 class="section-heading">KNOW BETTER</h2>
-						<p class="lead">Synergistically procrastinate one-to-one results for accurate platforms. Assertively whiteboard corporate users whereas dynamic initiatives.</p>
-						<p>Energistically architect leading-edge users and inexpensive internal or "organic" sources. Distinctively evolve e-business resources after progressive intellectual capital. Objectively architect maintainable technologies via strategic convergence. Continually optimize stand-alone expertise with e-business e-services. Continually conceptualize client-centered opportunities and.</p>
-						<p>Dynamically customize backward-compatible processes via front-end models. Distinctively evisculate an expanded array of scenarios after virtual information. Professionally predominate technically sound resources through impactful mindshare. Efficiently drive viral interfaces without inexpensive value. Credibly.</p>
-					</div>
-					<div class="col-md-6">
-						<img src="assets/img/intro-img.png" class="img-responsive" alt="Image Intro">
-					</div>
-				</div>
+		<!-- BRIEF ABOUT -->
+		<section id="about">
+			<div class="heading-center">
+				<h2 class="section-heading">WHO WE ARE</h2>
+				<p class="lead">Know us better</p>
+				<hr>
+			</div>
+			<div class="container text-center">
+				<p class="lead">Compellingly actualize excellent users and distinctive leadership skills. Interactively productivate cross functional methodologies with visionary e-business. Appropriately generate diverse "outside the box" thinking whereas cutting-edge deliverables. </p>
+				<a href="#" class="btn btn-primary btn-outline">READ MORE</a>
 			</div>
 		</section>
-		<!-- END INTRO -->
-		<!-- BOXED CONTENT -->
-		<section id="main-features">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6">
-						<div class="boxed-content left-aligned left-boxed-icon">
-							<i class="fa fa-flag"></i>
-							<h2 class="boxed-content-title">GOAL ORIENTED</h2>
-							<p>Holisticly harness just in time technologies via corporate scenarios. Intrinsicly predominate ubiquitous outsourcing through an expanded array of functionalities.</p>
-						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="boxed-content left-aligned left-boxed-icon">
-							<i class="fa fa-globe"></i>
-							<h2 class="boxed-content-title">GLOBAL SERVICE</h2>
-							<p>Holisticly harness just in time technologies via corporate scenarios. Intrinsicly predominate ubiquitous outsourcing through an expanded array of functionalities.</p>
-						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="boxed-content left-aligned left-boxed-icon">
-							<i class="fa fa-cog"></i>
-							<h2 class="boxed-content-title">DYNAMIC CHANGE</h2>
-							<p>Holisticly harness just in time technologies via corporate scenarios. Intrinsicly predominate ubiquitous outsourcing through an expanded array of functionalities.</p>
-						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="boxed-content left-aligned left-boxed-icon">
-							<i class="fa fa-users"></i>
-							<h2 class="boxed-content-title">PROFESSIONAL SUPPORT</h2>
-							<p>Holisticly harness just in time technologies via corporate scenarios. Intrinsicly predominate ubiquitous outsourcing through an expanded array of functionalities.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- END BOXED CONTENT -->
+		<!-- END BRIEF ABOUT -->
 		<!-- CAROUSEL -->
 		<section class="recent-works slick-carousel">
-			<div class="container">
+			<div class="heading-center">
 				<h2 class="section-heading">RECENT WORKS</h2>
+				<p class="lead">What we have accomplished</p>
+				<hr>
+				<div class="margin-bottom-50px">&nbsp;</div>
+			</div>
+			<div class="container">
 				<div class="portfolio-container">
 					<div class="portfolio-item">
 						<div class="overlay"></div>
@@ -355,107 +299,46 @@
 			</div>
 		</section>
 		<!-- END CAROUSEL -->
-		<!-- TEAM -->
-		<section class="team">
-			<div class="container">
-				<h2 class="section-heading margin-bottom-30px">MEET THE TEAM</h2>
-				<div class="section-content">
-					<div class="col-md-5">
-						<div class="team-member media">
-							<img src="assets/img/team/person1.png" class="media-object img-circle pull-left" alt="" />
-							<div class="media-body">
-								<h3 class="media-heading team-name">Michael Summer</h3>
-								<strong>Executive Director</strong>
-								<hr class="pull-left">
-								<div class="clearfix"></div>
-								<p>Dynamically evolve client-based portals through world-class models. Phosfluorescently simplify cross-platform convergence and multimedia based portals. Rapidiously.</p>
-								<ul class="list-inline social-icon">
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-5 col-md-offset-2">
-						<div class="team-member media">
-							<img src="assets/img/team/person2.png" class="media-object img-circle pull-left" alt="" />
-							<div class="media-body">
-								<h3 class="media-heading team-name">Jane Doe</h3>
-								<strong>Art Director</strong>
-								<hr class="pull-left">
-								<div class="clearfix"></div>
-								<p>Dynamically evolve client-based portals through world-class models. Phosfluorescently simplify cross-platform convergence and multimedia based portals. Rapidiously.</p>
-								<ul class="list-inline social-icon">
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-5">
-						<div class="team-member media">
-							<img src="assets/img/team/person3.png" class="media-object img-circle pull-left" alt="" />
-							<div class="media-body">
-								<h3 class="media-heading team-name">Cindy Marry</h3>
-								<strong>UI Designer</strong>
-								<hr class="pull-left">
-								<div class="clearfix"></div>
-								<p>Dynamically evolve client-based portals through world-class models. Phosfluorescently simplify cross-platform convergence and multimedia based portals. Rapidiously.</p>
-								<ul class="list-inline social-icon">
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-									<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-5 col-md-offset-2">
-						<div class="team-member media">
-							<img src="assets/img/team/person4.png" class="media-object img-circle pull-left" alt="" />
-							<div class="media-body">
-								<h3 class="media-heading team-name">Phillips Abraham</h3>
-								<strong>Front-end Developer</strong>
-								<hr class="pull-left">
-								<div class="clearfix"></div>
-								<p>Dynamically evolve client-based portals through world-class models. Phosfluorescently simplify cross-platform convergence and multimedia based portals. Rapidiously.</p>
-								<ul class="list-inline social-icon">
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-									<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- END TEAM -->
 		<!-- TESTIMONIAL -->
-		<section class="testimonial-fancy">
-			<div class="container">
+		<section class="testimonial slick-carousel">
+			<div class="heading-center">
+				<h2 class="section-heading">TESTIMONIAL</h2>
+				<p class="lead">What our partners say about us</p>
+				<hr>
+			</div>
+			<div class="container testimonial-container">
 				<div class="testimonial-body">
-					<h2 class="sr-only">TESTIMOMIAL</h2>
-					<i class="fa fa-quote-left"></i>
-					<p class="testimonial-bubble">
-						Credibly extend parallel relationships after clicks-and-mortar content. Credibly pontificate team building alignments rather than diverse quality vectors. Monotonectally benchmark business communities for distinctive mindshare.
-					</p>
+					<p>Credibly extend parallel relationships after clicks-and-mortar content. Credibly pontificate team building alignments rather than diverse quality vectors. Monotonectally benchmark business communities for distinctive mindshare.</p>
 					<div class="testimonial-author">
 						<img src="assets/img/user2.png" alt="Author" class="pull-left">
 						<span><span class="author-name">Antonius</span> <em>CEO of TheCompany</em></span>
 					</div>
 				</div>
+				<div class="testimonial-body">
+					<p>Credibly pontificate team building alignments rather than diverse quality vectors. Monotonectally benchmark business communities for distinctive mindshare.</p>
+					<div class="testimonial-author">
+						<img src="assets/img/user1.png" alt="Author" class="pull-left">
+						<span><span class="author-name">Michael</span> <em>General Manager of DreamCorp</em></span>
+					</div>
+				</div>
+				<div class="testimonial-body">
+					<p>Appropriately morph low-risk high-yield process improvements through progressive partnerships. Uniquely brand enabled. Globally network timely imperatives without plug-and-play schemas. Globally coordinate economically sound interfaces.</p>
+					<div class="testimonial-author">
+						<img src="assets/img/user5.png" alt="Author" class="pull-left">
+						<span><span class="author-name">Palmer</span> <em>Freelance Web Developer</em></span>
+					</div>
+				</div>
 			</div>
 		</section>
-		<div class="margin-bottom-30px">&nbsp;</div>
 		<!-- END TESTIMONIAL -->
 		<!-- OUR CLIENTS -->
 		<section class="clients">
-			<div class="container">
+			<div class="heading-center">
 				<h2 class="section-heading">OUR CLIENTS</h2>
+				<p class="lead">We value our partnership as our success factor</p>
+				<hr>
+			</div>
+			<div class="container">
 				<ul class="list-inline list-client-logo">
 					<li>
 						<a href="#"><img src="assets/img/clients/logo1.png" alt="logo" /></a>
@@ -573,8 +456,9 @@
 	<script src="assets/js/jquery-2.1.1.min.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>
 	<script src="assets/js/plugins/slick/slick.min.js"></script>
-	<script src="assets/js/plugins/jquery-cycle/jquery.cycle.all.js"></script>
-	<script src="assets/js/plugins/maximage/jquery.maximage.min.js"></script>
+	<script src="assets/js/plugins/easing/jquery.easing.min.js"></script>
+	<script src="assets/js/plugins/scrollto/jquery.localscroll-1.2.7-min.js"></script>
+	<script src="assets/js/plugins/scrollto/jquery.scrollTo-1.4.3.1-min.js"></script>
 	<script src="assets/js/plugins/autohidingnavbar/jquery.bootstrap-autohidingnavbar.min.js"></script>
 	<script src="assets/js/repute-scripts.js"></script>
 	
