--- a/index-v5_fullscreen_slider.html
+++ b/index-v5_fullscreen_slider.html
@@ -5,8 +5,8 @@
 	<title>Home v5 | Repute - Responsive Multipurpose Bootstrap Theme</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Observer Mobility">
-	<meta name="author" content="EveryDayKenneth">
+	<meta name="description" content="Responsive Multipurpose Bootstrap Theme">
+	<meta name="author" content="The Develovers">
 	<!-- CSS -->
 	<link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css">
 	<link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -21,11 +21,11 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400italic,400,600,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,300italic,400italic,700,400,300' rel='stylesheet' type='text/css'>
 	<!-- FAVICONS -->
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/observer144x144.png">
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/observer114x114.png">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/observer72x72.png">
-	<link rel="apple-touch-icon-precomposed" href="assets/ico/observer57x57.png">
-	<link rel="shortcut icon" href="assets/ico/observerfavicon.png">
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/repute144x144.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/repute114x114.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/repute72x72.png">
+	<link rel="apple-touch-icon-precomposed" href="assets/ico/repute57x57.png">
+	<link rel="shortcut icon" href="assets/ico/favicon.png">
 </head>
 
 <body class="fullscreen-slider">
