logo and favicons changed

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<!-- WRAPPER -->
 	<div class="wrapper">
 		<!-- NAVBAR -->
-		<nav class="navbar navbar-default navbar-transparent " role="navigation">
+		<nav class="navbar navbar-default navbar-transparent" role="navigation">
 			<div class="container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav">
@@ -40,7 +40,7 @@
 						<i class="fa fa-bars"></i>
 					</button>
 					<a href="index.html" class="navbar-brand navbar-logo">
-						<img src="assets/img/logo/repute-logo-light.png" alt="Repute - Responsive Multipurpose Bootstrap Theme">
+						<img src="assets/img/logo/observer225x150.png" alt="Observer Mobility Theme">
 					</a>
 				</div>
 				<!-- MAIN NAVIGATION -->
